stateful-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-server
  namespace: demo
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  replicas: 3
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: my-pv-storage
          # mountPath: /var/lib/redis
          persistentVolumeClaim:
            claimName: my-pvc
      containers:
      - name: redis
        image: redis:6.2-alpine
        ports:
        - containerPort: 6379
          name: redis
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
        volumeMounts:
        - name: my-pv-storage
          mountPath: "/var/lib/redis"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: demo
  labels:
    app: redis
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: redis

# apiVersion: v1
# kind: Service
# metadata:
#   name: redis
#   namespace: demo
#   labels:
#     app: redis
# spec:
#   type: ClusterIP
#   ports:
#   - port: 6379
#     name: redis
#   selector:
#     app: redis
